--- a/talks_and_papers/qp_paper/deleted_mats.tex
+++ b/talks_and_papers/qp_paper/deleted_mats.tex
@@ -194,3 +194,33 @@ Supplementary materials, including details related to the norming study and the 
 	Participants who failed to accurately respond to at least 85\% of the attention check questions were excluded from analysis. 19 participants were excluded on this basis, for a final total of 279 participants whose data were included in the analysis (6.3\% exclusion rate). \par 
 	
 25 participants' data were excluded for failing to reach the 80\% threshold on attention check questions, for a total of 276 participants whose data was analyzed (8.3\% exclusion rate).\par
+
+This set of exclusions leaves us with a final set of 5179 analyzable observations.
+
+Taken together with the results of \textcite{pozniak2021failures}, it appears that individual expectations about events or gender roles do indeed modulate the production of gendered language.
+
+%	Finally, we observe in the processing task that the effect of frequency is markedly more predictive for the young participants than it is for the older participants. While not directly related to the question at hand, it bears mentioning here due to the politically charged nature of the data. One possible interpretation of this finding is that young people are not consuming the kinds of mainstream media that are reflected in COCA, and as such are not receiving the same kind of input on politically charged terms as their elders. If this is the case, it has larger-reaching implications for the ways in which we implement frequency estimations into our linguistic analyses, and we believe this discrepancy and the related line of inquiry deserve further investigation. \par 
+
+The existence of overt commentary on the employment of gender-neutral role titles in the public sphere further substantiates this interpretation. 
+
+and employed items from the same semantic field (7) or made use of common idioms or sayings (8). Some of these questions also dealt specifically with social and occupational titles and adopted the same syntactic frame as the critical items, in order to distract from the salience of gender in the critical items (9). 
+
+ to control for possible ordering effects of presented options
+ 
+ As such, the examples in (1)-(6) are not necessarily indicative of the orders in which options were presented to participants.
+ 
+ The demographic breakdown of the participants whose data was included in Experiment One is provided in \hyperref[exp1-sample-table]{Table 1}
+ 
+ None of the participants had participated in the pilot study or in any other study related to the present project.
+ 
+ This resulted in the previous word disappearing and the subsequent one being revealed on the screen
+ 
+ , since each of these questions had a vignette-internally correct answer
+ 
+ The final gender-political distribution is provided in \hyperref[exp2-sample-table]{Table 2}
+ 
+ While none of the participants in our norming study reported being unfamiliar with any of the female terms
+ 
+ These opposite poles of the spectrum were termed `gender progressive' and `gender conservative', respectively.
+ 
+ 
