--- a/talks_and_papers/qp_paper/papineau_qp1.tex
+++ b/talks_and_papers/qp_paper/papineau_qp1.tex
@@ -42,7 +42,7 @@ Stanford, CA, 94305 USA}
 	English contains a subset of lexical entries which identify the semantic or real-world gender identity of the individuals they pick out, consisting primarily of pronouns, kinship terms, and a limited set of other role nouns. While generally common in discourse, these terms are often ideologically, socially, and politically charged or contested. Consider the famous and contemporary case of English pronouns. While psycholinguistic investigations have indicated that there is a processing advantage found in singular \textit{they} when it is paired with gender-underspecified referents \parencite{foertsch1997search,doherty2017gender,ackerman}, its usage continues to be debated on the battlefields of style guides, op-eds, and popular discourse, especially as it relates to its use as a pronoun used by non-binary or gender non-conforming individuals.  \par 
 	More conventionally-gendered pronouns have also been the subject of psycholinguistic analysis as they relate to real-world referent gender. \textcite{von2020implicit} found that, in the context of the United States 2016 presidential election, participant beliefs about whether or not Hillary Clinton would win the presidency had no effect on the production of \textit{she} as a coreferent pronoun with \textit{the future president}, and that \textit{she} induced a processing penalty when read in a context in which it was coreferent with \textit{the future president}. In fact, it was coreferential \textit{they} which increased in produced frequency as belief in Clinton's victory increased. However, in the context of the 2017 British General Election, \textit{she} was produced more frequently than \textit{he} when coreferential with \textit{the future Prime Minister}, when the incumbent Prime Minister was female (Theresa May). On the other hand, there was no such processing bonus for \textit{she} over \textit{he} until after the results of the election, indicating lingering sexist beliefs in the realm of language processing. These findings are reminiscent of previous work examining the relationship between societal expectations and reading times on gender-anomalous coreferents. For instance, coreferential pronouns are harder to process when they do not align with the stereotypical gender of the role noun in question, such as \textit{he} for \textit{nurse} or \textit{she} for \textit{electrician} \parencite{foertsch1997search,duffy2004violating}. These findings, taken together, suggest that our biases about who performs a particular social role inform the ways we produce and process the pronouns which refer to them.\par 	
 	Beyond the realm of pronominal reference, \textcite{pozniak2021failures} found that respondents who believed that female candidates would win in the 2020 Parisian and Marseille municipal elections were more likely to produce feminine-marked titles (as well as pronouns) to refer to the future politicians, but that masculine-marked forms were still dominant in both locales. Corpus data similarly indicates that referent gender indication is more prevalent when the gender of the referent runs counter to stereotypical assumptions. For example, the Corpus of Contemporary American English \parencite{coca} contains 165 tokens of \textit{male nurse}, compared to 53 of \textit{female nurse}. These biases are in turn learned by large language models trained on natural language corpora, raising concerns about the perpetuation of societal biases in the realm of automation and language \parencite{caliskan2017semantics,bender2021dangers,sutton2018biased}. Such findings further underscore the role of societally-held beliefs about the genders of particular social roles play in the language we use to describe those who fill these roles.\par 
-	While the aforementioned studies have investigated the role of group and societal-level biases in the processing and production of gendered language, this high-level focus leaves room for a more granular investigation of the role of \textit{individual} ideologies on this facet of the linguistic system. We can couch this question in the notion of surprisal, which measures processing difficulty as proportional to the relative surprisal (1) of a particular word occurring given previous input (\textit{w}\textsubscript{1},...,\textit{w}\textsubscript{\textit{i}-1}) and any extralinguistic or extrasentential content (\textit{C}) \parencite{levy2008expectation}.
+	While the aforementioned studies have investigated the role of group and societal-level biases and ideologies (interactional systems of biases and expectations about the world) in the processing and production of gendered language, this high-level focus leaves room for a more granular investigation of the role of \textit{individual} ideologies on this facet of the linguistic system. We can couch this question in the notion of surprisal, which measures processing difficulty as proportional to the relative surprisal (1) of a particular word occurring given previous input (\textit{w}\textsubscript{1},...,\textit{w}\textsubscript{\textit{i}-1}) and any extralinguistic or extrasentential content (\textit{C}) \parencite{levy2008expectation}.
 	
 	\begin{exe}
 		\item processing difficulty $\propto$ log\textit{P}(\textit{w}\textsubscript{\textit{i}}$|$\textit{w}\textsubscript{1},...,\textit{w}\textsubscript{\textit{i}-1},\textit{C})
@@ -132,7 +132,7 @@ Stanford, CA, 94305 USA}
 	\subsubsection{Model Structure} 
 	We fit a linear mixed effect model which predicted length-residualized reading time from fixed effects of political party (ternary, reference level: ``Democrat"), referent gender (binary, reference level: ``female"), participant age, gender ideology, and unigram surprisal. Random intercepts were included for participant and lexeme. Interactions were included between: ideology and age; surprisal and party; age and surprisal; age and party; ideology and party, and the three-way interaction between age, surprisal, and party. These interactions were included as a result of initial investigations which revealed a significant modulation of frequency effects by age (Figure 3).
 	
-	\subsubsection{Gender Ideology} In examining the role of gender ideology in the processing of gender-neutral terms, we find no effect of gender ideology for Democrats ($\beta$ = -0.00, \textit{SE} = 0.00, \textit{t} = -0.11, \textit{p} $>$ 0.5), or in the higher-level interactions for Republicans ($\beta$ = -0.00, \textit{SE} = 0.00, \textit{t} = -1.51, \textit{p} $>$ 0.1) or Non-Partisans ($\beta$ = -0.00, \textit{SE} = 0.00, \textit{t} = -1.34, \textit{p} $>$ 0.1), suggesting that prior beliefs about gender and its binary social roles does not modulate the processing of gender-neutral language.
+	\subsubsection{Gender Ideology} In examining the role of gender ideology in the processing of gender-neutral terms, we find no effect of gender ideology for Democrats ($\beta$ = -0.00, \textit{SE} = 0.00, \textit{t} = -0.11, \textit{p} $>$ 0.5), or in the higher-level interactions for Republicans ($\beta$ = -0.00, \textit{SE} = 0.00, \textit{t} = -1.51, \textit{p} $>$ 0.1) or Non-Partisans ($\beta$ = -0.00, \textit{SE} = 0.00, \textit{t} = -1.34, \textit{p} $>$ 0.1). This suggests that prior beliefs about gender and its binary social roles does not modulate the processing of gender-neutral language.
 	
 	\begin{figure}[h]
 		\centering
@@ -156,11 +156,11 @@ Stanford, CA, 94305 USA}
 	\begin{figure}[h!]
 		\centering
 		\includegraphics[scale=0.115]{proc-freq-party.png}
-		\caption{Residualised reading time on critical items by log word frequency. Each point indicates a lexeme.}
+		\caption{Residualised reading time on critical items by unigram surprisal. Each point indicates a lexeme. Age was demarcated at 40 years old.}
 	\end{figure}
 	
 	\section{Experiment Two: Forced-Choice Production}
-	Having investigated the potential link between gender ideology and the processing of neutral role nouns, we turn to the issue of ideology and the production of such terms. In a forced-choice task, participants selected the form of the lexeme they felt best completed the vignettes from Experiment One.
+	Having investigated the potential link between gender ideology and the processing of neutral role nouns, we find that individual gender-ideology does not significantly impact the processing of gender-neutral role nouns, but that there are interactions between participant party and age as they relate to unigram word surprisal. We turn now to the issue of ideology and the production of such terms, in an effort to further our understanding of the gender-language relationship by identifying the potential (a)symmetry between processing and production. In a forced-choice task, participants selected the form of the lexeme they felt best completed the vignettes from Experiment One.
 	
 	\subsection{Methods}
 	\subsubsection{Participants} 301 participants were recruited using Prolific, with the same criteria as Experiment 1\footnote{100 Democrats and 100 Republicans were recruited initially, in order to maintain a political balance. An additional 100 male-identifying participants were subsequently recruited due to a significant gender imbalance in the initial participant population (13.4\% male-identifying participants in the original population), as a result of an influx of female participants after Prolific went viral on social media app TikTok \parencite{charalambides2021}.}. Participants who failed to correctly respond to 80\% of attention checks were excluded (n=25). The final gender-political distribution is provided in \hyperref[exp2-sample-table]{Table 2}.\par
@@ -184,7 +184,7 @@ Stanford, CA, 94305 USA}
 	\end{table}
 	
 	\subsubsection{Stimuli \& Procedure} All items in the experiment consisted of a complete sentence missing a single word, using the same stimuli sentence frames and critical items from Experiment One. Participants were then provided with either two or three words which could complete the sentence by filling in the blank, and were asked to select the word which best did that. There were a total of 80 trials, with 20 critical items and 60 filler items.\par 
-	Filler items took one of two forms; semantic fillers and grammatical fillers. Semantic fillers had no prescriptively correct answer, and employed items from the same semantic field (7) or made use of common idioms or sayings (8). Some of these questions also dealt specifically with social and occupational titles and adopted the same syntactic frame as the critical items, in order to distract from the salience of gender in the critical items (9). 
+	Filler items took one of two forms; semantic fillers and grammatical fillers. Semantic fillers had no prescriptively correct answer, as in (8)-(10).
 	
 	\begin{exe}
 		\ex That's the cutest (horse/Lusitano/equine) I have ever seen!
@@ -192,7 +192,7 @@ Stanford, CA, 94305 USA}
 		\ex Revati is a (writer/journalist/author) from India.
 	\end{exe}
 	
-	Grammatical fillers, on the other hand, had prescriptively correct answers, and employed grammatical processes such as demonstrative selection (10), verb agreement (11), or preposition selection (12), among others. These items served a secondary purpose as attention check questions.
+	Grammatical fillers, on the other hand, had prescriptively correct answers, and employed grammatical processes such as demonstrative selection (11), verb agreement (12), or preposition selection (123), among others. These items served a secondary purpose as attention check questions.
 	
 	\begin{exe}
 		\ex She is typing on (\textbf{the}/these/those) computer.
@@ -200,30 +200,23 @@ Stanford, CA, 94305 USA}
 		\ex They are they eating their soup (between/\textbf{with}/at) a spoon.
 	\end{exe}
 	
-	All response possibilities, regardless of type (filler or critical) were shuffled between participants to control for possible ordering effects of presented options. As such, the examples in (1)-(6) are not necessarily indicative of the orders in which options were presented to participants. Similarly, all 70 trials were randomized between participants, after which they moved to the post-experimental phase of the study. 
+	All response possibilities, regardless of type (filler or critical) were shuffled between participants.  Similarly, all 70 trials were randomized between participants, after which they moved to the post-experimental phase of the study. 
 	
 	\subsubsection{Post-Experiment Questionnaire}
 	All participants completed the same post-experiment questionnaire as that of Experiment One. 
 	
-	\subsubsection{Log Odds} 
-	Similar to the frequency values incorporated in the analysis of Experiment One, we calculated a rough probability value for each of the neutral terms given its co-occurrence with a particular name gender. Because participants were presented with both gendered and gender-neutral options, traditional frequency values are insufficient to capture the probability of a particular form being selected. As a result, log odds were calculated as the log proportion of neutral forms over the competing gendered form, given a particular gendered name, with words per million values taken from the `spoken' portion of the Corpus of Contemporary American English \parencite{coca}. For example, in the sentence `Sally is a congress[person/woman/man]', the log odds of `congressperson' are calculated as the words per million occurrences of `congressperson' divided by the same metric for `congresswoman'. This measure was then included in the final models used for analysis.
+	\subsubsection{Neutral Probability} 
+	We calculated a probability value for each of the neutral terms given its co-occurrence with a particular name gender. Because participants were presented with both gendered and gender-neutral options, traditional surprisal values are insufficient to capture the probability of a particular form being selected. As a result, probabilities were calculated as the log proportion of neutral forms over the competing gendered form, given a particular gendered name, with words per million values taken from the `spoken' portion of COCA \parencite{coca} (14). For example, in the sentence `Sally is a congress[person/woman/man]', the probability of `congressperson' are calculated as the words per million occurrences of `congressperson' divided by the same metric for `congresswoman'. 
+	
+	\begin{exe}
+		\item	probability = log($\frac{\textrm{neutral wpm}}{\textrm{gendered wpm}}$)
+	\end{exe}
 	
 	
 	\subsection{Results}
 	
-	\subsubsection{Exclusions} 
-	An additional 241 responses were excluded from analysis for being incongruent with the names that appeared in the vignettes, such as `David is a congresswoman' or `Sally is a congressman'. These responses are, however, included in the visualizations presented in this section. This set of exclusions leaves us with a final set of 5179 analyzable observations.
-	
-	\subsubsection{Gender Ideology} We did not observe a main effect of gender ideology on the proportion of gender-neutral responses selected. Rather, only Democrats show an effect of this predictor, such that more gender progressive Democrats produced higher proportions of gender-neutral role nouns than their less progressive counterparts. Republicans and Non-Partisans show no such modulation by gender ideology. These observations are presented in Row 2 of Table 3. \par 
-	We additionally find that Democrats have a higher base production rate of gender-neutral role nouns than their Non-Partisan or Republican counterparts. While Democrats selected the gender-neutral forms 59.6\% of the time, Republicans selected them only 45.1\% of the time. The political Non-Partisans performed in the middle, selecting the neutral forms 53\% of the time.
-	
-	\begin{figure}[h]
-		\centering
-		\includegraphics[scale=0.12]{prod-3x2x3.png}
-		\caption{Proportion of responses by gender produced in Experiment Two, according to gender of the name in the stimulus sentence (x-axis facet) and participant political alignment (y-axis facet)}
-	\end{figure}
 		
-	\begin{table*}[t!]
+	\begin{table*}[h!]
 		\centering
 		\caption{Model outputs for each fixed effect (rows) for each of the political macrocategories.}
 		\vskip 0.12in
@@ -235,28 +228,42 @@ Stanford, CA, 94305 USA}
 					\midrule
 					trial gender   & 0.862 & 0.124 & \cellcolor{lightgray} $<$0.001        & 1.041 & 0.223 & \cellcolor{lightgray} $<$0.001 & 1.272  & 0.143 &  \cellcolor{lightgray} $<$0.001\\
 					ideology & -0.034  & 0.007 & \cellcolor{lightgray} $<$0.001            & -0.005 & 0.015& 0.714           & 0.001  & .005 & 0.886 \\
-					log odds & 9.234 & 2.222  &  \cellcolor{lightgray} $<$0.001            & 15.242 & 4.623 & \cellcolor{lightgray} $<$0.001     & 14.596  & 2.315 & \cellcolor{lightgray} $<$0.001\\
+					neutral probability & 9.234 & 2.222  &  \cellcolor{lightgray} $<$0.001            & 15.242 & 4.623 & \cellcolor{lightgray} $<$0.001     & 14.596  & 2.315 & \cellcolor{lightgray} $<$0.001\\
 					\bottomrule
 				\end{tabular}
 				%\caption{lmer(suspectconvictionJustified ~ generation * condition + (1|storyreproduction), data=dfmodel); high correlation of fixed effects}
 				\label{tab:exp2results}
 			\end{table*}
-		
-	\subsubsection{Referent Gender} With regard to trial gender, or the gender of the name presented in the vignette, we observed a main effect on production rates of gender-neutral titles. This resulted in participants of all three political macrocategories being more likely to produce gender-neutral forms when forced to pick a role title that coreferred with a male name. Across all observations, gender-neutral forms were produced 57\% of the time with male names, compared to only 48.7\% of the time with female names. These trends are presented in Row 1 of Table 3, and shown in the cross-gender differences of Figure 3.
 	
+	\subsubsection{Model Structure} For each of the political parties, we fit a generalized linear mixed effects model that predicted neutral responses (binary, reference level: "gendered") as a function of the interaction between gender ideology (centered) with referent gender (binary, centered, scaled, reference level: "male"), with an additional main effect of neutral probability. We also included random intercepts for participant and lexical item. None of the interactions reached a level of significance, and significant results are provided in Table 3.
+	
+	\subsubsection{Exclusions} 
+	An additional 241 responses were excluded from model analysis for being incongruent with the names that appeared in the vignettes, such as `David is a congresswoman' or `Sally is a congressman'. These responses are, however, included in Figure 4. 
+	
+	\subsubsection{Gender Ideology} We did not observe a main effect of gender ideology on the proportion of gender-neutral responses selected (Table 3, Row 2). Rather, only Democrats show an effect of this predictor, such that more gender progressive Democrats produced higher proportions of gender-neutral role nouns than their less progressive counterparts. Republicans and Non-Partisans show no such modulation by gender ideology. This indicates that Democrats have recruited gender-neutral role nouns as a semiotic resource with which to construct progressive personae. \par
+	We additionally find that Democrats have a higher base production rate of gender-neutral role nouns than their Non-Partisan or Republican counterparts. While Democrats selected the gender-neutral forms 59.6\% of the time, Republicans selected them only 45.1\% of the time. The political Non-Partisans performed in the middle, selecting the neutral forms 53\% of the time. This underscores the use of gender-neutral language as a marker of progressive gender ideology.
+	
+	\begin{figure}[h]
+		\centering
+		\includegraphics[scale=0.12]{prod-3x2x3.png}
+		\caption{Proportion of responses by gender produced in Experiment Two, according to gender of the name in the stimulus sentence (x-axis facet) and participant political alignment (y-axis facet)}
+	\end{figure}
 
 	
-	\subsubsection{Log Odds} Finally, we observe a main effect of log odds in the expected direction, such that a higher log probability of the neutral occurrence predicts a neutral response selection. This effect was found across all three political macrocategories, as seen in the third row of Table 3.
+	\subsubsection{Referent Gender} With regard to trial gender, or the gender of the name presented in the vignette, we observed a main effect on production rates of gender-neutral titles. This resulted in participants of all three political macrocategories being more likely to produce gender-neutral forms when forced to pick a role title that coreferred with a male name. Across all observations, gender-neutral forms were produced 57\% of the time with male names, compared to only 48.7\% of the time with female names. These trends are presented in Row 1 of Table 3, and shown in the cross-gender differences of Figure 3. Possible reasons for this are discussed below.
+	
+	\subsubsection{Neutral Probability} Finally, we observe a main effect of probability in the expected direction, such that a higher log probability of the neutral occurrence predicts a neutral response selection. This effect was found across all three political macrocategories, as seen in the third row of Table 3.
 
+
+			
 	
 	\section{General Discussion}
-	 In our processing study, we observed no significant effect of gender ideology on the processing of gender-neutral role titles when they coreferred with gendered names. This is reminiscent of the findings of \textcite{von2020implicit}, wherein presidentially-coreferential \textit{she} incurred a significant processing penalty despite societal expectations that Hillary Clinton would win the 2016 election. Our data similarly indicates individually-held beliefs about gender do not modulate the processing of gender-neutral role nouns.\par 
-	This finding is particularly intriguing when contrasted with the findings of our production task. When forced to make a gendered selection of a role noun which corefers with a gendered name, we observe that gender-progressive Democrats are more likely to select the gender neutral version than their more conservative counterparts. This is true both group internally (i.e. progressive Democrats use neutral terms more than conservative Democrats) and group-externally (i.e. Democrats use more neutral terms than Republicans or Non-Partisans). Taken together with the results of \textcite{pozniak2021failures}, it appears that individual expectations about events or gender roles do indeed modulate the production of gendered language.\par 
-	To explain this two-part discrepancy, we appeal to the notion of \textit{indexicality} \parencite{eckert2008variation}. We argue that gender-neutral forms of morphologically-gendered items are a semiotic resource upon which users of English can draw to index their relative progressiveness with regard to gender. As a result, Democrats (who have generally higher scores on our scale of gender-progressiveness) are more likely to use gender-neutral compounds in their creation of gender-progressive personae. On the other hand, Republicans are less likely to use these forms, as doing so would index an ideology about gender that they may not have. This seems at least numerically substantiated in our data, as the Republicans also had a more conservative score on the gender ideology index. \par 
-	The existence of overt commentary on the employment of gender-neutral role titles in the public sphere further substantiates this interpretation. For example, Richard Grenell, former Acting Director of National Intelligence under President Trump, tweeted an image of a gingerbread person with an accompanying display-case card that read ``Gingerbread Person". Alongside this was Grenell's caption `Stop voting for Democrats.' \parencite{Grenell}. Here, Grenell explicitly draws on the Democrat association with gender neutral role nouns in order to implicitly assert that elected Democrats are responsible for the proliferation of politically-correct language regarding gender. In this sense, then, we argue that the production of gender-neutral forms has come to index a stance of gender progressiveness, and that such indexical associations form part of a larger language ideology (in the sense of Gal \& Irvine 1995) wherein differences in gendered language are mapped onto social categories such as `Democrats' or `Republicans'.\par 
-	We also observe that male names are more likely to elicit neutral role titles in the production task than female names. We posit that this may be because the lexical items under investigation are overwhelmingly male-associated, with only \textit{flight attendant} being rated as `likely a woman' in the results of our norming study (see Supplementary Materials). As a result, these roles being filled by women are societally `marked', in that they run counter to our expectations. Participants may then be more likely to pick the `marked' form of the lexeme, which in most cases is the female form, either by morphology (\textit{actor} vs. \textit{actr-ess}, where \textit{actress} is morphologically more complex) or by frequency. While none of the participants in our norming study reported being unfamiliar with any of the female terms (see Supplementary Materials), terms such as \textit{firewoman} and \textit{villainess} are rare in the corpus, if they occur at all (\textit{firewoman}, for example, does not). As such, it may be the case that participants are selecting marked linguistic forms to pick out marked real-world referents.\par 
+	 In our processing study, we observed no significant effect of gender ideology on the processing of gender-neutral role titles when they coreferred with gendered names. This is reminiscent of the findings of \textcite{von2020implicit}, wherein presidentially-coreferential \textit{she} incurred a significant processing penalty despite societal expectations that Hillary Clinton would win the 2016 election. Our data similarly indicates individually-held beliefs about gender do not modulate the processing of gender-neutral role nouns. However, we do see a difference in processing as a function of age and word surprisal, such that young participants show less sensitivity to effects of word frequency than do older participants, potentially indicating differences in exposure to these terms in media.\par 
+	 However, when forced to make a gendered selection of a role noun which corefers with a gendered name, we observe that gender-progressive Democrats are more likely to select the gender neutral version than their more conservative counterparts. This is true both group internally (i.e. progressive Democrats use neutral terms more than conservative Democrats) and group-externally (i.e. Democrats use more neutral terms than Republicans or Non-Partisans). \par 
+	To explain this discrepancy, we argue that gender-neutral forms of morphologically-gendered items are a semiotic resource upon which users of English can draw to \textit{index} \parencite{eckert2008variation} their relative progressiveness with regard to gender. As a result, Democrats (who have generally higher scores on our scale of gender-progressiveness than Republicans) are more likely to use gender-neutral compounds in their creation of gender-progressive personae. On the other hand, Republicans are less likely to use these forms, as doing so would index an ideology about gender that they may not have. \par 
+	External commentary indicates that the production of gender-neutral forms has come to index a stance of gender progressiveness, and that such indexical associations form part of a larger language ideology (in the sense of Gal \& Irvine 1995) wherein differences in gendered language are mapped onto social categories such as `Democrats' or `Republicans'. For example, former Acting Director of National Intelligence Richard Grenell tweeted an image of a cookie with an accompanying display-case card that read ``Gingerbread Person". Alongside this was Grenell's caption: `Stop voting for Democrats.' \parencite{Grenell}. Grenell explicitly draws on language ideology to implicitly assert that elected Democrats are responsible for the proliferation of politically-correct language regarding gender. \par 
+	We also observe that male names are more likely to elicit neutral role titles in the production task than female names. This may be because the lexical items under investigation are overwhelmingly male-associated, with only \textit{flight attendant} being rated as `likely a woman' in our norming study. As a result, these roles being filled by women are societally `marked', in that they run counter to our expectations. Participants may then be more likely to pick the `marked' form of the lexeme, which in most cases is the female form, either by morphology (\textit{actor} vs. \textit{actr-ess}, where \textit{actress} is morphologically more complex) or by frequency. While none of the participants in our norming study reported being unfamiliar with any of the female terms, terms such as \textit{firewoman} and \textit{villainess} are rare in the corpus, if they occur at all (\textit{firewoman}, for example, does not). As such, it may be the case that participants are selecting marked linguistic forms to pick out marked real-world referents.\par 
 	Alternatively, as is apparent in Figure 4, the answer may partially lie in the fact that respondents are willing to assign female referents masculine titles at a much greater rate than they are to do the opposite. While such productions were not included in the analysis, their presence as options in the task at hand may have inadvertently skewed the proportions of productions. Future work is planned to investigate these `gender incongruent' productions.\par 
-%	Finally, we observe in the processing task that the effect of frequency is markedly more predictive for the young participants than it is for the older participants. While not directly related to the question at hand, it bears mentioning here due to the politically charged nature of the data. One possible interpretation of this finding is that young people are not consuming the kinds of mainstream media that are reflected in COCA, and as such are not receiving the same kind of input on politically charged terms as their elders. If this is the case, it has larger-reaching implications for the ways in which we implement frequency estimations into our linguistic analyses, and we believe this discrepancy and the related line of inquiry deserve further investigation. \par 
 	In sum, we believe that these results further our understanding of the relationship between gender and language by highlighting an incongruity in the processing and production of gender-neutral role nouns. Moreover, this incongruity is found at the individual level, calling for a greater degree of granularity of our investigations of biases in the linguistic system. The examination of such biases is critical in the development of fair and inclusive language, and we hope that the work herein will encourage researchers to pursue such work with the individual and their experiences in mind. 
 	
 
